crates/toml/tests/snapshots/invalid/string/no-open-01.stderr
TOML parse error at line 1, column 6
  |
1 | s = a"
  |      ^
unexpected key or value, expected newline, `#`
